[package]
name = "utxone"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
dashmap = "6.1.0"
hex = "0.4.3"
rand = {version = "0.9.1",  features = ["small_rng"]}
serde = {version = "1.0.219", features = ["derive"]} 
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
